--- a/src/app/pages/new-game/new-game.component.html
+++ b/src/app/pages/new-game/new-game.component.html
@@ -1,12 +1,12 @@
 <form [formGroup]="userForm" (ngSubmit)="onSubmit()">
-  <div formArrayName="users" class="users-fieldset">
+  <div formArrayName="players" class="players-fieldset">
     <h2>Spelers</h2>
-    <mat-form-field appearance="outline" *ngFor="let user of users.controls; let i=index">
+    <mat-form-field appearance="outline" *ngFor="let user of players.controls; let i=index">
       <mat-label>Naam speler</mat-label>
       <input matInput [formControlName]="i" placeholder="Naam speler">
       <mat-icon matSuffix>person</mat-icon>
     </mat-form-field>
-    <button mat-icon-button type="button" (click)="addUser()" class="add-user-button">
+    <button mat-icon-button type="button" (click)="addPlayer()" class="add-player-button">
       <mat-icon>add</mat-icon>
     </button>
     <button mat-button color="primary" type="submit">Save</button>
