--- a/src/app/pages/new-game/new-game.component.scss
+++ b/src/app/pages/new-game/new-game.component.scss
@@ -1,9 +1,9 @@
-.users-fieldset {
+.players-fieldset {
   display: flex;
   flex-direction: column;
   padding: 20px;
 
-  & .add-user-button {
+  & .add-player-button {
     align-self: flex-end;
   }
 }
